# Ray_tracer-learning-project-

./: CMakeLists.txt  README.md  RT.cpp  RT.sln  RT.vcxproj  RT.vcxproj.filters  camera.h  color.h  helper.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec3.h
RT/x64/Debug/: RT.exe.recipe  RT.ilk  rt.obj.enc  vc143.idb
RT/x64/Debug/RT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: .out5.ppm.swo  .out5.ppm.swp  HAHAs.ppm  anti.ppm  finalll.ppm  nor.ppm  norma.ppm  norma1.ppm  omel.ppm  out1.ppm  out2.ppm  sphere.ppm  sphere1.ppm
